li add and paddin margine add

--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
         <h4>This is my Fourth Blog</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, neque! Architecto nulla ea iste enim mollitia ipsum qui quod, vitae tempora voluptas. Commodi tenetur consequatur vel illo enim placeat repellat.</p>
     </div>
+    <ol>
+        <h3>Git add command</h3>
+        <li>git add .</li>
+        <li>git commit -m"first commit</li>
+        <li>git push</li>
+    </ol>
 </body>
 </html>
