--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style/Style.css">
 </head>
 <body>
-    <H3>This Is My Blog Website</H3>
+    <H3 class="title">This Is My Blog Website </H3>
     <div>
         <h4>This is my First Blog</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, neque! Architecto nulla ea iste enim mollitia ipsum qui quod, vitae tempora voluptas. Commodi tenetur consequatur vel illo enim placeat repellat.</p>
@@ -25,11 +25,13 @@
         <h4>This is my Fourth Blog</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, neque! Architecto nulla ea iste enim mollitia ipsum qui quod, vitae tempora voluptas. Commodi tenetur consequatur vel illo enim placeat repellat.</p>
     </div>
+   <div id="add">
     <ol>
         <h3>Git add command</h3>
         <li>git add .</li>
         <li>git commit -m"first commit</li>
         <li>git push</li>
     </ol>
+   </div>
 </body>
 </html>
